Project product_component_data {
  database_type: "MySQL"
  Note: "ERD section for Product and Component Data."
}

Table brand {
  brand_id int [pk, increment]
  name varchar(100) [not null]
  description varchar(500)
  website varchar(255)
  status bit
}

Table category {
  category_id int [pk, increment]
  parent_id int
  category_name varchar(100) [not null]
  description varchar(500)
  display_order int
  created_at date
}

Table product {
  product_id int [pk, increment]
  brand_id int
  product_name varchar(255) [not null]
  price decimal(15,0) [not null]
  status bit
  lifecycle_status varchar(30) [not null]
  description varchar(500)
  specification varchar(500)
  created_at date
  inventory_quantity int
  performance_score int
}

Table product_category {
  product_id int [pk, not null]
  category_id int [pk, not null]
}

Table image {
  image_id int [pk, increment]
  product_id int [not null]
  image_url varchar(255)
  created_at date
}

Table external_product_source {
  external_product_source_id int [pk, increment]
  product_id int [not null]
  provider_code varchar(50) [not null]
  external_id varchar(255) [not null]
  sku varchar(255)
  currency varchar(10)
  product_url varchar(500)
}

Table cpu {
  product_id int [pk]
  socket varchar(50)
  tdp int
  max_memory_speed int
  memory_channels int
  pcie_version varchar(20)
  has_igpu bit
}

Table gpu {
  product_id int [pk]
  vram int
  memory_type varchar(50)
  tdp int
  gpu_interface varchar(50)
  pcie_version varchar(20)
  length int
}

Table mainboard {
  product_id int [pk]
  socket varchar(50)
  chipset varchar(50)
  form_factor varchar(50)
  memory_slots int
  max_memory_speed int
  memory_type varchar(50)
  pcie_version varchar(20)
  m2_slots int
  sata_ports int
}

Table memory {
  product_id int [pk]
  type varchar(50)
  capacity int
  speed int
  tdp int
  modules int
}

Table storage {
  product_id int [pk]
  type varchar(50)
  capacity int
  interface varchar(50)
  read_speed int
  write_speed int
}

Table pc_case {
  product_id int [pk]
  form_factor varchar(50)
  gpu_max_length int
  cpu_max_cooler_height int
  psu_form_factor varchar(20)
}

Table power_supply {
  product_id int [pk]
  wattage int
  efficiency varchar(50)
  modular bit
  form_factor varchar(20)
}

Table cooling {
  product_id int [pk]
  type varchar(50)
  max_tdp int
  fan_size int
  radiator_size int
}

Ref: product.brand_id > brand.brand_id
Ref: category.parent_id > category.category_id [delete: set null]
Ref: product_category.product_id > product.product_id [delete: cascade]
Ref: product_category.category_id > category.category_id [delete: cascade]
Ref: image.product_id > product.product_id [delete: cascade]
Ref: external_product_source.product_id > product.product_id [delete: cascade]

Ref: cpu.product_id - product.product_id [delete: cascade]
Ref: gpu.product_id - product.product_id [delete: cascade]
Ref: mainboard.product_id - product.product_id [delete: cascade]
Ref: memory.product_id - product.product_id [delete: cascade]
Ref: storage.product_id - product.product_id [delete: cascade]
Ref: pc_case.product_id - product.product_id [delete: cascade]
Ref: power_supply.product_id - product.product_id [delete: cascade]
Ref: cooling.product_id - product.product_id [delete: cascade]
